--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -32,6 +32,16 @@ fetch.github = "edo9300/irrlicht1-8-4"
 src.git = "https://github.com/taquangtrung/emacs-kdl-mode"
 fetch.github = "taquangtrung/emacs-kdl-mode"
 
+[nvidia]
+src.webpage = "https://www.nvidia.com/en-us/drivers/unix/"
+src.regex = "Latest Production Branch Version:</span> <a href=.*?> (.*?)</a>"
+fetch.url = "https://download.nvidia.com/XFree86/Linux-x86_64/$ver/NVIDIA-Linux-x86_64-$ver.run"
+
+[nvidia-open]
+src.webpage = "https://www.nvidia.com/en-us/drivers/unix/"
+src.regex = "Latest Production Branch Version:</span> <a href=.*?> (.*?)</a>"
+fetch.github = "NVIDIA/open-gpu-kernel-modules"
+
 [ocgcore]
 src.github = "edo9300/ygopro-core"
 fetch.github = "edo9300/ygopro-core"
