feat(theming): Switch to catppuccin

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -14,6 +14,11 @@ output "Dell Inc. DELL G2723HN 5B0C3H3" {
 
 # Window decorations
 
+client.focused           $lavender $base $text  $lavender $lavender
+client.focused_inactive  $overlay0 $base $text  $lavender $overlay0
+client.unfocused         $overlay0 $base $text  $lavender $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+
 # corner_radius 10
 # smart_corner_radius enable
 default_border pixel
