fix(browser): Remove a few more references to Firefox

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -95,6 +95,6 @@ bindsym {
 }
 
 ## Idle inhibitors
-for_window [title="Element.*" app_id="firefox"] inhibit_idle visible
-for_window [title=".*Discord.*" app_id="firefox"] inhibit_idle visible
+for_window [title="Element.*" app_id="net.tlater.firefox-webapp.element"] inhibit_idle visible
+for_window [title=".*Discord.*" app_id="net.tlater.firefox-webapp.discord"] inhibit_idle visible
 for_window [title="Windblown"] inhibit_idle visible
