feat(sway): Switch from wpaperd to swaybg
wpaperd keeps crashing and freezing

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -2,6 +2,9 @@ exec gsettings set org.gnome.desktop.interface cursor-theme $XCURSOR_THEME
 exec gsettings set org.gnome.desktop.interface cursor-size $XCURSOR_SIZE
 exec uwsm finalize
 
+# Disable default swaybg config
+swaybg_command -
+
 # Monitors
 
 set $mod Mod4
