feat(sway): Use app2unit instead of `uwsm app`
Fixes #445

--- a/home-config/dotfiles/sway.conf
+++ b/home-config/dotfiles/sway.conf
@@ -34,9 +34,9 @@ gaps {
 
 ## Basic applications
 bindsym {
-  $mod+Q exec uwsm app -- Alacritty.desktop
-  $mod+E exec uwsm app -- emacsclient.desktop
-  $mod+R exec uwsm app -- fuzzel --launch-prefix='uwsm app -- '
+  $mod+Q exec app2unit -- Alacritty.desktop
+  $mod+E exec app2unit -- emacsclient.desktop
+  $mod+R exec app2unit -- fuzzel --launch-prefix='app2unit --fuzzel-compat -- '
   $mod+L exec systemctl --user start swaylock
 }
 
